--- a/main.html
+++ b/main.html
@@ -6,8 +6,24 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="width:100vw;
+	height:100vh; 
+	display:flex; 
+	align-items:center; 
+	justify-content:center;
+	">
 	<!-- the entire body must be written by student -->
+	<div style="
+		width:200px;
+		height:200px;
+		background-color:lightblue; 
+		align-items:center; 
+		justify-content:center;
+		display:flex;
+		border:2px black;
+		">
+		<h1 style="color:purple; font-size:20px;">This is center</h1>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
