--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 		align-items:center; 
 		justify-content:center;
 		display:flex;
-		border:2px black;
+		border: 2px solid black;
 		">
 		<h1 style="color:purple; font-size:20px;">This is center</h1>
 	</div>
